--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
             <p>Dear XYZ,</p>
             <p>Your presence shines</p>
             <p>like a beacon of positivity.</p>
-            <p>You’ve inspired and motivated those</p>
-            <p>around you with your dedication</p>
-            <p> and brilliance. Wishing you continued </p>
-            <p>success and joy on your special day!</p>
+            <p>You’ve inspired and motivated</p>
+            <p>those around you with your </p>
+            <p>dedication and brilliance. Wishing you  </p>
+            <p>continued success and joy on your</p>
+            <p>special day!</p>
             <p class="text-right">Happy Birthday XYZ🎂</p>
             <p class="text-right">♥Team CentraLogic</p>
         </div>
